--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.0.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
     "vite": "^5.2.0",
     "typescript": "^5.1.6",
     "tailwindcss": "^3.4.1",
