--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "infinia-minimal-browser",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
- "dependencies": {
-  "react": "^18.2.0",
-  "react-dom": "^18.2.0",
-  "@vitejs/plugin-react": "^4.0.0"
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.0.0"
   },
   "devDependencies": {
     "vite": "^5.2.0",
